force-app/main/default/objects/Assign_Resource__c/Assign_Resource__c.object-meta.xml
<CustomObject>
    <label>Assign Resource</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Assign Resource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assign Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>